CAY-2674 Support in-memory evaluation of aggregate functions

Bug Fixes:

CAY-2591 Modeler: project becomes dirty after click on dbImport or cgen tab
CAY-2671 QualifierTranslator fails to translate expressions with compound PKs/FKs
CAY-2675 A one-to-one relationship with meaningful PK can be nullified in the nested context
CAY-2679 Unstable ordering of relationships in the .map.xml file

----------------------------------
Release: 4.2.M1
Date: April 7, 2020
----------------------------------
Changes/New Features:

CAY-2465 New SelectTranslator implementation
CAY-2466 New internal API to build SQL
CAY-2467 New type-aware Property API
CAY-2468 Support subqueries in Expression API
CAY-2507 Property API to use path aliases
CAY-2508 Create api to add aliases in expressions
CAY-2510 Create builder to load custom modules into plugins and modeler
CAY-2511 Contribute custom properties for attributes
CAY-2512 Support for custom functions in Expression API and Property API
CAY-2514 Set SERVER_CONTEXTS_SYNC_PROPERTY default value to false
CAY-2517 EventManager: optimization of adding listeners
CAY-2518 Add method to append having qualifier expression to ObjectSelect
CAY-2520 Split ObjectId into several specialized variants
CAY-2522 Make ObjectSelect a direct query
CAY-2523 Deprecate SelectQuery
CAY-2525 Deprecate OpenBase adapter
CAY-2527 API to map Object[] result to POJO
CAY-2539 Import procedures with the help of MergerToken
CAY-2540 Modeler: redesign dbRelationship editor dialog
CAY-2542 Modeler: redesign ObjRelationship editor dialog
CAY-2543 Move ResultSetMapping generation from metadata to translator
CAY-2549 Modeler: Redesign ObjAttribute editor dialog
CAY-2551 Create extended type for abstract Number class
CAY-2555 Use explicit ArcId in GraphChangeHandler methods
CAY-2557 Add java.time.Duration and java.time.Period to supported types
CAY-2562 Make ROPServerModule autoloaded
CAY-2563 Deprecate old scalarQuery methods in SQLSelect