@@ -35,11 +35,13 @@ end_import
 
 begin_import
 import|import
-name|javax
+name|java
 operator|.
-name|swing
+name|awt
 operator|.
-name|*
+name|event
+operator|.
+name|ActionListener
 import|;
 end_import
 
@@ -51,7 +53,17 @@ name|awt
 operator|.
 name|event
 operator|.
-name|ActionListener
+name|ItemListener
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|JCheckBox
 import|;
 end_import
 
@@ -65,6 +77,10 @@ block|{
 specifier|private
 name|ActionListener
 name|actionListener
+decl_stmt|;
+specifier|private
+name|boolean
+name|modelUpdateDisabled
 decl_stmt|;
 specifier|public
 name|JCayenneCheckBox
@@ -85,6 +101,73 @@ argument_list|(
 name|this
 operator|.
 name|actionListener
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|void
+name|setSelected
+parameter_list|(
+name|boolean
+name|b
+parameter_list|)
+block|{
+name|modelUpdateDisabled
+operator|=
+literal|true
+expr_stmt|;
+try|try
+block|{
+name|super
+operator|.
+name|setSelected
+argument_list|(
+name|b
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|modelUpdateDisabled
+operator|=
+literal|false
+expr_stmt|;
+block|}
+block|}
+annotation|@
+name|Override
+specifier|public
+name|void
+name|addItemListener
+parameter_list|(
+name|ItemListener
+name|l
+parameter_list|)
+block|{
+name|super
+operator|.
+name|addItemListener
+argument_list|(
+name|e
+lambda|->
+block|{
+if|if
+condition|(
+operator|!
+name|modelUpdateDisabled
+condition|)
+block|{
+name|l
+operator|.
+name|itemStateChanged
+argument_list|(
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 argument_list|)
 expr_stmt|;
 block|}
